fixed layout issues

--- a/PhoneGapBasic/www/css/index.css
+++ b/PhoneGapBasic/www/css/index.css
@@ -47,13 +47,6 @@ body {
 
 /* Portrait layout (default) */
 .app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
     padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
     margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
@@ -78,42 +71,6 @@ h1 {
     text-align:center;
 }
 
-.event {
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
-}
-
-.event.listening {
-    background-color:#333333;
-    display:block;
-}
-
-.event.received {
-    background-color:#4B946A;
-    display:none;
-}
-
-@keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
- 
-@-webkit-keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
- 
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
-}
-
 /* Sporty Ipsum Styling*/
 
 #sportyheader {
@@ -133,15 +90,19 @@ h1 {
 }
 
 #sportybuttons {
-	margin-left: 290px;
+	margin-left: 20px;
+	height: 60px;
 }
 
 .ipsumbtn {
-	background:none;
-	border: 0;
-	outline:none;
-	box-shadow:none;
-	text-decoration:none;
+	background:none !important;
+	border: 0 !important;
+	outline: none !important;
+	box-shadow: none !important;
+	text-decoration: none !important;
+	width: 25% !important;
+	display: inline-block !important;
+  	float: left !important;
 }
 
 .ipsumbtn:hover {
